# pcb-design-poc

./: .gitignore  ARCHITECTURE.md  README.md  SETUP.md  TESTING.md  test-api.ps1  test-setup.ps1
backend/: ENV-VALIDATION.md  INSTALL-SCIKIT-LEARN.md  QUICK-START-BACKEND.md  QUICK-START.md  README-UV.md  SERVER-RUNNING.md  fix-install.ps1  pyproject.toml  requirements.txt  run-server.ps1  start-server.ps1  start.ps1  test-start.ps1  validate-env.ps1  validate-env.sh
backend/app/: __init__.py  main.py
backend/app/api/: designs.py  ml.py
backend/app/domain/: __init__.py  ml_services.py  models.py  services.py
backend/app/infra/: __init__.py  memory_repo.py
backend/tests/: __init__.py  test_designs_api.py
frontend/: FIX-REACT-KONVA.md  INSTALL-SUCCESS.md  fix-install.ps1  fix-vite-cache.ps1  index.html  package-lock.json  package.json  restart-dev.ps1  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx  routes.tsx
frontend/src/app/layout/: BottomStatusBar.css  BottomStatusBar.tsx  CanvasArea.css  CanvasArea.tsx  LeftToolbox.css  LeftToolbox.tsx  RightPanel.css  RightPanel.tsx  TopBar.css  TopBar.tsx
frontend/src/app/routes/: EditorPage.css  EditorPage.tsx  HomePage.css  HomePage.tsx
frontend/src/features/assistant/: AssistantPanel.css  AssistantPanel.tsx  ErrorList.css  ErrorList.tsx  TipsPanel.css  TipsPanel.tsx
frontend/src/features/editor/: BoardCanvas.css  BoardCanvas.tsx  PropertiesPanel.css  (+5 more)
shared-schema/python/pcb_schema/: __init__.py  issues.py  models.py
shared-schema/ts/src/: schema.ts
(+23 files in other folders)
